2012-03-22  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.php: Changed the preview
	tab target to the operation section merged from trunk

2012-03-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/javascript/pandora.js
	operation/agentes/stat_win.php: Fixed the period select
	in the popup (statwin) view

2012-03-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Added global var
	to avoid php warning.

2012-03-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/javascript/pandora.js
	include/functions_alerts.php
	godmode/alerts/configure_alert_template.php
	godmode/alerts/alert_list.builder.php: Improved the period
	control and add it in the alert actions and alert templates
	forms

2012-03-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php: Fixed the human time 
	description function merged from trunk

	* godmode/reporting/graph_builder.preview.php: Deleted
	unless preview file in graphics

2012-03-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	godmode/reporting/reporting_builder.php
	operation/reporting/reporting_viewer.php: Improve the intervals
	form into the html report view, fix the order of the from-to
	dates in the report items header and improve navegavility
	deleting preview section in godmode and replacing 
	it by a link to operation

2012-03-20 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: now the function
	"html_print_input_text_extended" accept a script code as string for event
	"keyup" or as array where the index is string for each event where you want
	add javascript code. And make more pretty the page of report and cleaned
	source code style. 

	* include/functions_reporting.php,
	godmode/reporting/reporting_builder.list_items.php,
	godmode/reporting/reporting_builder.php: changed the old method to order